--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
 	<!-- Start CSS -->
 		
-
+		<%= stylesheet_link_tag(['style', 'blue', 'anythingSlider'])%>	
 		
 		<!--[if IE 6]>
 		   <link href="css/ie6.css" type="text/css" rel="stylesheet" media="all" />
@@ -29,7 +29,7 @@
 			</script>
 		<![endif]--> 
 		
-		<%= javascript_include_tag 'jquery-1.5.2.min.js', 'jquery.easing.1.2.js','jquery.anythingslider.js', :cache => 'client_js' %>
+		<%= javascript_include_tag 'jquery-1.5.2.min.js', 'jquery.easing.1.2.js','jquery.anythingslider.js' %>
 		 		
 		
 		<script type="text/javascript">
