--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
 					});			
 			}); 		
 		</script>	
-		<%= javascript_include_tag 'superfish.js', 'jquery.tweet.js','stylesheetToggle.js', 'common.js', :cache => 'client_jsall' %>
+		<%= javascript_include_tag 'superfish.js', 'jquery.tweet.js','stylesheetToggle.js', 'common.js' %>
 		
 	<!-- End Javascript -->		
 </head>
