--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 	  <title>Admin: <%= controller.action_name %></title>
-  <%= stylesheet_link_tag  'admin', :cache => 'admin_all' %>
+  <%= stylesheet_link_tag  'admin' %>
   <%= javascript_include_tag "tiny_mce/tiny_mce" %>
 
 	<script type="text/javascript">
