--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,8 +73,18 @@
 				<a class="nav-item" href="/pages/about">About</a>
 			</li>
 			
-				<li>
-					<a class="nav-item" href="/pages/services">Services</a>
+			
+				
+				<li class="dropdown">
+					<a class="nav-item" href="#">Services</a>
+						<ul class="dropdown-wrap">
+							<li>
+								<a href="/pages/finance">Finance</a>
+							</li>
+							<li>
+								<a href="/pages/education">Education</a>
+							</li>		
+						 </ul>
 				</li>
 			
 			<li>
