--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -198,7 +198,7 @@ a.small-primary-btn, a.small-secondary-btn, input.small-primary-btn,
 h1,h2,h3,h4,h5,h6 {
 	font-weight: normal;
 	color: #2c2b2b;
-	font-family: "OpenSansRegular";
+	font-family: Century Gothic;
 }
 
 h1 {
@@ -247,7 +247,7 @@ a:hover, a:active {
 	padding: 15px 15px 15px 23px;	
 	font-size: 23px;
 	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.8);
-	font-family: "OpenSansRegular";
+	font-family: Century Gothic;
 	font-weight: normal;	
 }
 
@@ -293,7 +293,7 @@ a:hover, a:active {
 	padding: 6px 14px 8px 14px;	
 	font-size: 15px;
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.8);
-	font-family: "OpenSansRegular";	
+	font-family: Century Gothic;	
 }
 
 .small-secondary-btn {
@@ -392,7 +392,7 @@ a:hover, a:active {
 #main-nav a {
 	color: #000;
 	text-shadow: 0 1px #fff;
-	font-family: "OpenSansRegular";
+	font-family: "Century Gothic";
 	font-weight: normal;	
 }
 
@@ -1669,7 +1669,7 @@ blockquote p {
 }
 
 #footer a.footer-btn {
-	font-family: "OpenSansRegular";	
+	font-family: Century Gothic;	
 	background: #fff url(../images/footer-btn.gif) repeat-x 0 bottom;
 	color: #4b4b4b;	
 	display: inline-block;	
