--- a/app/views/emailer/contact_email.html.erb
+++ b/app/views/emailer/contact_email.html.erb
@@ -23,8 +23,8 @@
 			<tr>
 				<td style="background-color:#020202;">
 					<div style="text-align: left; float: left;">
-					<a target="_blank" href="http://www.nagpurartgallery.com/">
-						<img src="http://www.nagpurartgallery.com/images/nagpurartgallery.png" style="vertical-align: middle;" alt="Nagpurartgallery">
+					<a target="_blank" href="http://electric-galaxy-867.heroku.com/">
+						<img src="http://electric-galaxy-867.heroku.com/images/stb-logo.png" style="vertical-align: middle;" alt="STB-Finance">
 					</a>
 					</div>
 				</td>
@@ -32,8 +32,8 @@
 		</tbody>
 	</table>
 	<div style="padding: 0px;">
-		<div style="clear: both; background-color: #F2F1FF;">
-			<div style="padding: 5px; background-color: #F2F1FF; font-size: 13px;">
+		<div style="clear: both; background-color: #fff;">
+			<div style="padding: 5px; background-color: #fff; font-size: 13px;">
 				<div style="padding: 10px;">Name : <%= @contact.name %></div>
 				<div style="padding: 10px;">Email : <%= @contact.email %> </div>
 				
@@ -48,7 +48,7 @@
 			</div>
 		</div>
 	</div>
-	<div style="padding-top: 6px; text-align: center; font-size: 9px; padding-bottom: 6px;"><div style="color: rgb(102, 102, 102);">Nagpur Art Gallery Team</div>
+	<div style="padding-top: 6px; text-align: center; font-size: 9px; padding-bottom: 6px;"><div style="color: rgb(102, 102, 102);">STB Finance Team</div>
 		<div style="color: rgb(102, 102, 102);"><a target="_blank" href="http://kunalinfotech.net/" style="color:#fff;">Kunal Infotech Pvt Ltd</a></div>
 		
 	</div>
