--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -97,8 +97,8 @@
 <!-- End Header -->
 
 
-
-			<p class="notice"><%= notice %></p>
+			<%= content_tag 'div', h(flash[:notice]), :class => 'errorMsg', :id => 'notice' if flash[:notice] %>
+			
 	       	<p class="alert"><%= alert %></p>
 
 
