--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -73,9 +73,9 @@
 			<p>Lorem ipsum dolor sit amet, adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula.</p>
 			<div class="section">				
 				<div class="three-col">
-					<div class="highlight-box">
+					<div class="highlight-box" style="padding-bottom:21px !important;">
 						<img class="large-icon ie6fix" alt="" src="images/checked-paper.png" />
-						<h3>Solutions for your business</h3>
+						<h3>Financial Services</h3>
 					</div>
 					<p class="no-pad">Lorem ipsum dolor sit amet, adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula.</p>
 					<a href="#" class="arrow-link">Learn More</a>		
@@ -83,7 +83,7 @@
 				<div class="three-col">
 					<div class="highlight-box">
 						<img class="large-icon ie6fix" alt="" src="images/web.png" />
-						<h3>Take advantage of our global reach</h3>
+						<h3>Commerce Coaching Classes</h3>
 					</div>
 					<p class="no-pad">Donec commodo euismod rutrum. Proin rhoncus eros a sapien tempor vestibulum. Sed egestas posuere risus quis sodales. Nulla et sapien at tortor condimentum euismod ac in velit. Integer suscipit lorem id nunc gravida congue. Aliquam libero nisi, imperdiet at, tincidunt nec.</p>
 					<a href="#" class="arrow-link">Learn More</a>		
