--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -122,34 +122,19 @@
 				<ul>
 					<li><a id="twitter" class="footer-icon-link" href="#">Twitter</a></li>
 					<li><a id="facebook" class="footer-icon-link" href="#">Facebook</a></li>
-					<li><a id="tumblr" class="footer-icon-link" href="#">Tumblr</a></li>
-					<li><a id="youtube" class="footer-icon-link" href="#">YouTube</a></li>
-					<li><a id="flickr" class="footer-icon-link" href="#">Flickr</a></li>
-					<li><a id="rss" class="footer-icon-link" href="#">RSS Feed</a></li>					
+									
 				</ul>
 			</div>
 			<div class="footer-col">
 				<h3>Pages</h3>
 				<ul>
-					<li><a href="#">About Us</a></li>
-					<li><a href="#">Features</a></li>
-					<li><a href="#">Portfolio</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Styles</a></li>		
+					<li><a href="/pages/about">About</a></li>
+					<li><a href="/pages/finance">Finance</a></li>
+					<li><a href="/pages/education">Education</a></li>
 					<li><a href="/contacts">Contact</a></li>													
 				</ul>
 			</div>
-			<div class="footer-col">
-				<h3>Blog</h3>
-				<ul>
-					<li><a href="#">Branding</a></li>
-					<li><a href="#">Development</a></li>
-					<li><a href="#">Case Studies</a></li>
-					<li><a href="#">Marketing</a></li>
-					<li><a href="#">News</a></li>		
-					<li><a href="#">Web Design</a></li>													
-				</ul>
-			</div>
+			
 							
 		</div>
 		<div class="clear"></div>
