--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -134,10 +134,8 @@
 				<h3>Our Services</h3>
 				<div class="widget-content">
 					<ul class="arrow-list">
-						<li><a href="#">Technology Consulting</a></li>
-						<li><a href="#">Brand Management</a></li>
-						<li><a href="#">Training</a></li>													
-						<li><a href="#">Public Relations</a></li>									
+						<li><a href="/pages/finance">Finance</a></li>
+						<li><a href="/pages/education">Education</a></li>									
 					</ul>
 				</div>
 			</div>			
