--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -26,6 +26,6 @@
 			  </tr>
 			<% end %>
 			</table>
-			
+			<p><%= will_paginate @contacts, :class=>'pagination_magArticles' %></p>
 			<br />
 </div>
