--- a/app/views/admin/tips/index.html.erb
+++ b/app/views/admin/tips/index.html.erb
@@ -23,6 +23,6 @@
 			  </tr>
 			<% end %>
 			</table>
-			
+			<p><%= will_paginate @contacts, :class=>'pagination_magArticles' %></p>
 			<br />
 </div>
