--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -629,4 +629,9 @@ h4.photo_title {
 .admintablehd {background: none repeat scroll 0 0 #E5ECF9; color: #000000; font-weight: bold;}
 .admintable tr td {border:2px solid #E5ECF9;}
 
+.pagination_magArticles{padding-top:1px;}
+.pagination_magArticles a{border:1px solid #aabbcc; margin-right:3px; color:#000099; padding:4px 5px; background:#fff;font-weight:bold}
+.pagination_magArticles em{border: 1px solid #AABBCC; color: red; font-weight: bold; padding: 4px 5px; }
+.pagination_magArticles {padding:3px;}
+
 
