--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,13 +9,10 @@
 							<img alt="" src="images/slide1-596x310.jpg" />
 						</div>
 						<div class="slide-content fr">
-							<h2>Color Skins</h2>
-							<p>Elevate comes with a variety of different skins to fit your project. A Photoshop file setup with slices for quick and convenient creation of custom skins is also included.</p>
-							<ul class="bullet-list">
-								<li>15 skins</li>
-								<li>Photoshop file with slices</li>
-							</ul>
-							<a href="#" class="small-secondary-btn">Learn More</a>	
+							<h2>Stock Broking Services</h2>
+							<p>Our vision is to offer various Financial Services and Products in such a way that it leads to optimum gains for the entities involved in these transactions.</p>
+							
+							<a href="/pages/finance" class="small-secondary-btn">Learn More</a>	
 						</div>
 				   	</li>
 				    <li>
@@ -23,9 +20,9 @@
 							<img alt="" src="images/slide2-596x310.jpg" />
 						</div>
 						<div class="slide-content fl">
-							<h2>Homepage Options</h2>
-							<p>There are 3 homepage templates included and two different content sliders to choose from. One homepage is geared towards general business, another for showcasing a portoflio/work, and one for SaaS that highlights features/benefits.</p>
-							<a href="#" class="small-secondary-btn">Learn More</a>	
+							<h2>Share Market Advisory Services</h2>
+							<p>We offer the best Share Market Advisory Services to help our clients to gain the momentum in stock broking and see their investments growing very fast. Our vision is to provide a host of real time, financial advisory services to clients trading on the Shares and Commodities and help them achieve their desired goals.</p>
+							<a href="/pages/finance" class="small-secondary-btn">Learn More</a>	
 						</div>		   
 					 </li>
 				    <li>
@@ -33,12 +30,9 @@
 							<img alt="" src="images/slide3-596x310.jpg" />
 						</div>
 						<div class="slide-content fr">
-							<h2>Social Features</h2>
-							<ul class="bullet-list">
-								<li>Twitter timeline feed in footer. Comes with different settings including options to turn on/off avatar image as well as number of tweets to display.</li>
-								<li>Ability to turn Twitter @mentions on blog pages into links and display a hovercard. Uses the Twitter @Anywhere API.</li>
-								<li>Facebook Like and Tweet buttons for social promotion.</li>
-							</ul>
+							<h2>Educational Services</h2>
+							<p>Our vision is to provide our students the best in the class coaching to gain the thorough practical insights of the subjects and prepare them to excel in their academics as well as in competitive examinations.</p>
+							<a href="/pages/education" class="small-secondary-btn">Learn More</a>
 						</div>
 					 </li>
 				    <li>
@@ -46,9 +40,9 @@
 							<img alt="" src="images/slide4-596x310.jpg" />
 						</div>
 						<div class="slide-content fl">
-							<h2>Email Form and Lightbox</h2>
-							<p>Elevate comes with a AJAX/PHP email contact form and a lightbox for displaying images and videos.</p>
-							<a href="#" class="small-secondary-btn">Learn More</a>
+							<h2>Get your Fees Refund !!!</h2>
+							<p>If you are not able to excel in your academics or competitive examinations, then you can get your fees refund. Our confidence to help you grow is indomitable…</p>
+							<a href="/pages/education" class="small-secondary-btn">Learn More</a>
 						</div>
 					 </li>
 				</ul>        
@@ -59,7 +53,7 @@
 </div>
 <div id="headline-wrap">
 	<div id="headline-callout">
-		<h1>Find out how we can help you transform your company with our world-class services.</h1>
+		<h1>Welcome to STB Financial Services.</h1>
 		<a href="/contacts" class="large-primary-btn">Contact Us<span class="ie6fix"></span></a>	
 	</div>
 </div>
@@ -69,8 +63,8 @@
 		<!-- Start Main Content -->	
 		<div id="main-content">
 			<h3>What We Do</h3>
-			<p>Aliquam odio neque, porttitor ut aliquam eu, aliquam quis purus. Mauris nunc sapien, sodales eu adipiscing in, lobortis eu justo. Curabitur in mollis erat. Phasellus vel elit non dolor fermentum volutpat ut quis enim.</p>
-			<p>Lorem ipsum dolor sit amet, adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula.</p>
+			<p>STB Financial Services is one of the most trusted financial service providers in Central India. With diversified business in Financial Services such as Stock Broking Services, Share Market Advisory Services, Mutual Funds, Life Insurance Services up to the Education Services such as coaching for CS, CPT (CA Entrance), ICWA, BCA, BBA, BCCA, HSSC, B.Com, MBA etc., we have emerged as the global leader in these two major verticals.</p>
+			 <a href="/pages/about" class="arrow-link">Learn More</a>
 			<div class="section">				
 				<div class="three-col">
 					<div class="highlight-box" style="padding-bottom:21px !important;">
