--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -6,7 +6,7 @@
 		
 			<h1><%= @page.title %></h1>
 			<div class="main-ruler"></div>
-			<p><%= @page.body %></p>
+			<p><%= @page.body.html_safe %></p>
 		
 		</div>
 	<!-- End Main Content -->
