--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -107,14 +107,14 @@
 		<div id="sidebar">
 			<div class="widget">
 				<div class="widget-top round-top"></div>
-				<h3>Recent Stock Market Tips</h3>				
+				<h3>Recent Stock Market Tips11</h3>				
 				<div class="widget-content">
 				<% tips = Tip.find(:all, :order => 'id desc', :limit => 5) %>
 				<% tips.each do |stip| %>
 				<ul class="arrow-list">
 					<li>
 						<%= link_to stip.title , tip_path(stip) %>
-						<p><em><%= truncate(stip.description, :length => 70) %></em></p>
+						<p><em><%= truncate(stip.description, :length => 70).html_safe %></em></p>
 					</li>
 														
 				</ul>
