--- a/app/views/tips/index.html.erb
+++ b/app/views/tips/index.html.erb
@@ -13,8 +13,9 @@
 							</ul>
 							<div class="clear"></div>
 						</div>
-					<p><%= truncate(tip.description, :length => 310) %></p>
-								
+					<p><%= truncate(tip.description, :length => 310).html_safe %></p>
+						
+						<%= link_to "Learn More", tip_path(tip), :class=>'arrow-link' %>	
 					<div class="clear"></div>
 					<div class="main-ruler"></div>			
 		   </div>
@@ -35,7 +36,8 @@
 				<ul class="arrow-list">
 					<li>
 						<%= link_to stip.title , tip_path(stip) %>
-						<p><em><%= truncate(stip.description, :length => 70) %></em></p>
+						<p><em><%= truncate(stip.description, :length => 70).html_safe %></em></p>
+						
 					</li>
 														
 				</ul>
@@ -50,7 +52,7 @@
 				<h3>Get in Touch</h3>
 				<div class="widget-content">
 					<p>Lorem ipsum dolor sit amet, adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem.</p>
-					<a href="#" class="arrow-link">Contact Us</a>			
+					<a href="/contacts" class="arrow-link">Contact Us</a>			
 				</div>
 			</div>					
 		</div>
