--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -107,7 +107,7 @@
 		<div id="sidebar">
 			<div class="widget">
 				<div class="widget-top round-top"></div>
-				<h3>Recent Stock Market Tips11</h3>				
+				<h3>Recent Stock Market Tips</h3>				
 				<div class="widget-content">
 				<% tips = Tip.find(:all, :order => 'id desc', :limit => 5) %>
 				<% tips.each do |stip| %>
