--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
 				<ul>
 					<li>
 						<div class="slide-feature round-all fl">
-							<img alt="" src="images/slide1-596x310.jpg" />
+							<img alt="" src="images/advisor.jpg" />
 						</div>
 						<div class="slide-content fr">
 							<h2>Stock Broking Services</h2>
@@ -17,7 +17,7 @@
 				   	</li>
 				    <li>
 				   		<div class="slide-feature round-all fr">
-							<img alt="" src="images/slide2-596x310.jpg" />
+							<img alt="" src="images/share-market.jpg" />
 						</div>
 						<div class="slide-content fl">
 							<h2>Share Market Advisory Services</h2>
@@ -27,7 +27,7 @@
 					 </li>
 				    <li>
 				   		<div class="slide-feature round-all fl">
-							<img alt="" src="images/slide3-596x310.jpg" />
+							<img alt="" src="images/education.jpg" />
 						</div>
 						<div class="slide-content fr">
 							<h2>Educational Services</h2>
@@ -37,7 +37,7 @@
 					 </li>
 				    <li>
 				   		<div class="slide-feature round-all fr">
-							<img alt="" src="images/slide4-596x310.jpg" />
+							<img alt="" src="images/timetosave.jpg" />
 						</div>
 						<div class="slide-content fl">
 							<h2>Get your Fees Refund !!!</h2>
