--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
 	<title>STB Financial Services</title>
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />	
+	<meta name="google-site-verification" content="_EhkENCjrd5scce4qyXzZ8m7SJj5rt4mkWHkXgZUJ00" />
     <link rel="shortcut icon" href="images/favicon.ico" />
 
 	<!-- Start CSS -->
