--- a/app/views/emailer/contact_email.html.erb
+++ b/app/views/emailer/contact_email.html.erb
@@ -48,8 +48,11 @@
 			</div>
 		</div>
 	</div>
-	<div style="padding-top: 6px; text-align: center; font-size: 9px; padding-bottom: 6px;"><div style="color: rgb(102, 102, 102);">STB Finance Team</div>
-		<div style="color: rgb(102, 102, 102);"><a target="_blank" href="http://kunalinfotech.net/" style="color:#fff;">Kunal Infotech Pvt Ltd</a></div>
+	<div style="padding-top: 6px; text-align: center; font-size: 9px; padding-bottom: 6px;">
+	<div style="color: rgb(102, 102, 102);">
+	STB Financial Services © 2011. Powered by <a target="_blank" href="http://kunalinfotech.net/" style="color: rgb(102, 102, 102);">Kunal Infotech Pvt Ltd</a>
+  </div>
+		
 		
 	</div>
 	      
