--- a/app/views/emailer/contact_email.html.erb
+++ b/app/views/emailer/contact_email.html.erb
@@ -23,8 +23,8 @@
 			<tr>
 				<td style="background-color:#020202;">
 					<div style="text-align: left; float: left;">
-					<a target="_blank" href="http://electric-galaxy-867.heroku.com/">
-						<img src="http://electric-galaxy-867.heroku.com/images/stb-logo.png" style="vertical-align: middle;" alt="STB-Finance">
+					<a target="_blank" href="http://www.stbgroup.in/">
+						<img src="http://www.stbgroup.in/images/stb-logo.png" style="vertical-align: middle;" alt="STB-Finance">
 					</a>
 					</div>
 				</td>
