--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>STB Financial Services</title>
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />	
+	<title><%= @meta_title %></title>
+	<meta name="keywords" content="<%= @meta_keywords %>" />
+	<meta name="description" content="<%= @meta_description %>" />	
 	<meta name="google-site-verification" content="_EhkENCjrd5scce4qyXzZ8m7SJj5rt4mkWHkXgZUJ00" />
     <link rel="shortcut icon" href="images/favicon.ico" />
 
