--- a/app/views/admin/notifications/show.html.erb
+++ b/app/views/admin/notifications/show.html.erb
@@ -1,6 +1,6 @@
 <div id="content">
 
 <p><%= @notification.title %></p>
-<p><%= decode_entities(@notification.description) %></p>
+<p><%= @notification.description.html_safe %></p>
 
 </div>
