--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -18,7 +18,7 @@
 			<% @pages.each do |page| %>
 			  <tr>
 			    <td><%= page.title %></td>
-			    <td><%= truncate(page.body, :length => 110) %> </td>
+			    <td><%= truncate(page.body, :length => 110).html_safe %> </td>
 			    <td style="text-align: center !important;"> <%= link_to "Edit", edit_admin_page_path(page), :class=>'button positive' %> &nbsp;&nbsp; 
 				<a href="/admin/pages/<%= page.id %>/delete" onclick="if(confirm('Are you sure you want to delete this page?'))  return true;  else  return false;" class="button negative" >Delete</a>
 				</td>
