--- a/app/views/admin/tips/index.html.erb
+++ b/app/views/admin/tips/index.html.erb
@@ -15,7 +15,7 @@
 			<% @tips.each do |tip| %>
 			  <tr>
 			    <td><%= link_to tip.title, admin_tip_path(tip) %></td>
-			    <td><%= truncate(tip.description, :length => 110) %></td>
+			    <td><%= truncate(tip.description, :length => 110).html_safe %></td>
 			    <td style="text-align: center !important;"> <%= link_to "Edit", edit_admin_tip_path(tip), :class=>'button positive' %> &nbsp;&nbsp; 
 				<a href="/admin/tips/<%= tip.id %>/delete" onclick="if(confirm('Are you sure you want to delete this tips?'))  return true;  else  return false;" class="button negative" >Delete</a>
 				</td>
