--- a/app/views/admin/tips/show.html.erb
+++ b/app/views/admin/tips/show.html.erb
@@ -1,6 +1,6 @@
 <div id="content">
 
 <p><%= @tip.title %></p>
-<p><%= decode_entities(@tip.description) %></p>
+<p><%= @tip.description.html_safe %></p>
 
 </div>
