--- a/app/views/admin/notifications/show.html.erb
+++ b/app/views/admin/notifications/show.html.erb
@@ -1,6 +1,6 @@
 <div id="content">
 
-<p><%= @notification.title %></p>
+<h2><%= @notification.title %></h2>
 <p><%= @notification.description.html_safe %></p>
 
 </div>
