--- a/app/views/admin/pages/edit.html.erb
+++ b/app/views/admin/pages/edit.html.erb
@@ -21,6 +21,8 @@
 		    <%= f.label :body %>
 		    <%= f.text_area :body, :class => 'tiny_mce' %>
 		  </p>
+		  <fieldset>
+          <legend>For SEO  : </legend>
 		  <p>
 		    <%= f.label :keyword %>
 		    <%= f.text_field :keyword, :class => 'text' %>
@@ -31,6 +33,7 @@
 		    <%= f.text_area :meta_description, :class => 'tiny_mce' %>
 
 		  </p>
+		  </fieldset>
 		  
 		  <%= render :partial =>"shared/button" %>
 		
