--- a/app/views/admin/pages/new.html.erb
+++ b/app/views/admin/pages/new.html.erb
@@ -27,6 +27,8 @@
 		    <%= f.label :body %>
 		    <%= f.text_area :body, :class => 'tiny_mce' %>
 		  </p>
+		  <fieldset>
+          <legend>For SEO  : </legend>
 		  <p>
 		    <%= f.label :keyword %>
 		    <%= f.text_field :keyword, :class => 'text' %>
@@ -37,6 +39,7 @@
 		    <%= f.text_area :meta_description, :class => 'tiny_mce' %>
 			
 		  </p>
+		  </fieldset>
 		  
 		  <%= render :partial =>"shared/button" %>
 		
