--- a/app/views/admin/pages/edit.html.erb
+++ b/app/views/admin/pages/edit.html.erb
@@ -4,6 +4,10 @@
 
 		<% form_for [:admin, @page] do |f| %>
 		  
+		  <%- @page.errors.full_messages.each do |message| -%>
+		   <div class="errorExplanation"> <p><%= message %></p></div>
+		  <%- end -%>
+		  
 		  <div id="breadcrumb">
 		  	   <%= link_to "Pages", admin_pages_path %> &raquo; New
 		  </div>
