--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -125,7 +125,7 @@
 		<div class="footer-content">
 			<div id="contact">
 				<h3>Get in Touch</h3>
-				<p>Aliquam odio neque, porttitor ut aliquam eu, aliquam quis purus. Mauris nunc sapien, sodales eu adipiscing.</p>
+				<p>We are highly committed to deliver services with quality and profitability! Get in touch with us to know more ....</p>
 				<a href="/contacts" class="footer-btn round-all">Contact Us</a>					
 			</div>
 			<div class="footer-col">
