--- a/app/views/tips/index.html.erb
+++ b/app/views/tips/index.html.erb
@@ -31,7 +31,7 @@
 				<div class="widget-top round-top"></div>
 				<h3>Recent Stock Market Tips</h3>				
 				<div class="widget-content">
-				<% tips = Tip.find(:all, :order => 'id desc', :limit => 5) %>
+				<% tips = Tip.find(:all, :order => 'id desc', :limit => 4) %>
 				<% tips.each do |stip| %>
 				<ul class="arrow-list">
 					<li>
@@ -51,7 +51,7 @@
 				<div class="widget-top round-top"></div>
 				<h3>Get in Touch</h3>
 				<div class="widget-content">
-					<p>Lorem ipsum dolor sit amet, adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem.</p>
+					<p>We are highly committed to deliver services with quality and profitability! Get in touch with us to know more ....</p>
 					<a href="/contacts" class="arrow-link">Contact Us</a>			
 				</div>
 			</div>					
