--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -154,8 +154,9 @@
 	<div id="footer-bottom">
 		<div class="footer-content">
 			<ul>
+			  <li><a href="/pages/privacy-policy">Privacy Policy</a></li>
 				<li><a href="/pages/terms-and-conditions">Terms &amp; Conditions</a></li>
-				<li><a href="/pages/privacy-policy">Privacy Policy</a></li>				
+				<li><a href="/pages/disclaimer">Disclaimer</a></li>	 			
 			</ul>
 			<p class="fr">STB Financial Services &copy; 2011. Powered by <a class="high-link" href="http://kunalinfotech.net/" target="_blank">Kunal Infotech Pvt Ltd.</a></p>
 			<div class="clear"></div>
