--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -86,17 +86,17 @@
 				<div class="three-col">
 					<h3>Benefits</h3>
 					<ul class="check-list">
-						<li class="ie6fix">Lorem ipsum dolor sit amet, adipiscing elit. Nullam dignissim convallis est.</li>
-						<li class="ie6fix">Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula.</li>
-						<li class="ie6fix">Proin rhoncus eros a sapien tempor.</li>					
+						<li class="ie6fix">Maximum Return on Investments (ROI).</li>
+						<li class="ie6fix">Customized Investment Plans.</li>
+						<li class="ie6fix">Life Long Financial Security.</li>					
 					</ul>
 				</div>
 				<div class="three-col">
 					<h3>What people are saying</h3>
 					<div class="quote">
 						<div class="ie6fix"></div>
-						<p><em>Aliquam odio neque, porttitor ut aliquam eu, aliquam quis purus. Mauris nunc sapien, sodales eu adipiscing in, lobortis eu justo. Curabitur in mollis erat. Phasellus vel elit non dolor fermentum volutpat ut quis enim.</em></p>
-						<p><strong>Simon Cartwright, CFO</strong></p>
+						<p><em>STB Group is really the one stop shop for all your Financial as well as Educational needs!!! A versatile Group with excellent and expert guidance for Share Market Investments and Professional Coaching Classes in Central India. Highly recommended!!!</em></p>
+						<p><strong>Ajay Kumar</strong></p>
 					</div>
 				</div>
 				<div class="ruler"></div>				
